--- a/views/res_config_settings_views.xml
+++ b/views/res_config_settings_views.xml
@@ -5,7 +5,7 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="point_of_sale.res_config_settings_view_form" />
         <field name="arch" type="xml">
-            <div id="payment_methods_new" position="after">
+            <setting id="payment_methods_new" position="after">
                 <div class="col-12 col-lg-6 o_setting_box" id="payment)methods_restricted">
                     <div class="o_settings_right_pane">
                         <span class="o_form_label">Credit Limit Reached</span>
@@ -17,13 +17,13 @@
                                     colspan="4"
                                     nolabel="1"
                                     widget="many2many_tags"
-                                    attrs="{'readonly': [('pos_has_active_session','=',True)]}"
+                                    readonly="'pos_has_active_session','=',True"
                                     options="{'no_create': True}"
                              />
                         </div>
                     </div>
                 </div>
-            </div>
+            </setting>
         </field>
     </record>
 </odoo>
